Делает все декоративные элементы

--- a/source/less/blocks/additional-products-list.less
+++ b/source/less/blocks/additional-products-list.less
@@ -9,12 +9,12 @@
 .additional-products-list__item {
   padding-top: 13px;
   padding-bottom: 19px;
-  border-bottom: 1px solid #cdcdcd;
+  border-bottom: 1px solid @color-border;
 
   @media (min-width: @tablet-width) {
     padding: 26px 38px 28px 38px;
-    border-right: 1px solid #cdcdcd;
-    border-left: 1px solid #cdcdcd;
+    border-right: 1px solid @color-border;
+    border-left: 1px solid @color-border;
   }
 
   @media (min-width: @desktop-width) {
@@ -25,5 +25,5 @@
 }
 
 .additional-products-list__item:first-child {
-  border-top: 1px solid #cdcdcd;
+  border-top: 1px solid @color-border;
 }
