--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -76,8 +76,7 @@
   position: relative;
   padding: 187px 61px 43px 58px;
   background-color: fade(@color-base-gr, 85%);
-  background-image: url("../../img/green-subsrate.png"),
-                    url("../../img/action.png");
+  background-image: url("../../img/green-subsrate.png"), url("../../img/action.png");
   background-repeat: no-repeat;
 
   &::after {
@@ -135,7 +134,7 @@
     text-align: left;
     font-size: 16px;
     line-height: 20px;
-    }
+  }
 
   @media (min-width: @desktop-width) {
     text-align: center;
