--- a/source/less/blocks/basic-card.less
+++ b/source/less/blocks/basic-card.less
@@ -85,7 +85,7 @@
 
   @media (min-width: @tablet-width) {
     padding-bottom: 4px;
-    border-bottom: 1px solid #cdcdcd;
+    border-bottom: 1px solid @color-border;
   }
 }
 
