--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -38,12 +38,12 @@
   align-self: stretch;
 
   &:hover {
-    background-color: #ebebeb;
+    background-color: @color-bg-darkes;
     transition: 0.7s;
   }
 
   &:active {
-    background-color: #ebebeb;
+    background-color: @color-bg-darkes;
     color: fade(@color-text-primary, 30%);
     transition: 0.7s;
   }
