--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -21,7 +21,7 @@
 
   @media (min-width: @tablet-width) {
     &::after {
-      display: none;
+      content: unset;
     }
   }
 
@@ -29,7 +29,7 @@
     padding-top: 143px;
 
     &::after {
-      display: block;
+      content: "";
       left: auto;
       width: 50%;
       height: 100%;
