--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,26 +1,22 @@
 .site-list {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
+  width: 100%;
   list-style: none;
   background-color: @color-bg-light;
 
   @media (min-width: @tablet-width) {
-    display: flex;
     flex-direction: row;
+    justify-content: flex-end;
     column-gap: 33px;
     flex-wrap: wrap;
   }
 
   @media (min-width: @desktop-width) {
-    justify-content: flex-end;
     background-color: transparent;
   }
-}
-
-.site-list--open {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .site-list__item {
@@ -28,7 +24,7 @@
   padding-bottom: 24px;
   width: 100%;
   text-align: center;
-  border-top: 1px solid #e6e6e6;
+  border-top: 1px solid @color-border-lighter;
 
   @media (min-width: @tablet-width) {
     padding: 0;
