--- a/source/less/blocks/advantages-list.less
+++ b/source/less/blocks/advantages-list.less
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  counter-reset: advantages 0;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
@@ -17,6 +18,7 @@
 .advantages-list__item {
   position: relative;
   padding-left: 80px;
+  counter-increment: advantages 1;
 
   &::before {
     content: "";
@@ -63,11 +65,11 @@
     }
 
     &::after {
-      content: "";
+      content: counter(advantages);
       position: absolute;
       top: 0;
       right: 0;
-      color: #f2f2f2;
+      color: @color-bg-dark;
       font-family: "Oswald", sans-serif;
       font-size: 280px;
       font-weight: 400;
@@ -76,20 +78,7 @@
     }
 
     &--benefit::after {
-      content: "1";
       right: 26px;
-    }
-
-    &--easier::after {
-      content: "2";
-    }
-
-    &--practical::after {
-      content: "3";
-    }
-
-    &--fast::after {
-      content: "4";
     }
   }
 }
