--- a/source/less/blocks/basic-products.less
+++ b/source/less/blocks/basic-products.less
@@ -8,7 +8,7 @@
     left: -100%;
     width: 768px;
     height: 1px;
-    background-color: #ebebeb;
+    background-color: @color-bg-darkes;
   }
 
   &::after {
@@ -18,16 +18,16 @@
     right: -100%;
     width: 768px;
     height: 1px;
-    background-color: #ebebeb;
+    background-color: @color-bg-darkes;
   }
 
   @media (min-width: @tablet-width) {
     &::before {
-      display: none;
+      content: unset;
     }
 
     &::after {
-      display: none;
+      content: unset;
     }
   }
 }
