--- a/source/less/blocks/form-list.less
+++ b/source/less/blocks/form-list.less
@@ -14,16 +14,16 @@
     margin-left: 13px;
     padding: 11px 20px;
     border: none;
-    outline: 1px solid #e7e7e7;
+    outline: 1px solid @color-outline;
     flex-grow: 1;
 
     &:hover {
-      outline-color: #cdcdcd;
+      outline-color: @color-border;
     }
 
     &:focus {
       border: none;
-      outline: 2px solid #444444;
+      outline: 2px solid @color-text-primary;
     }
 
     &:focus:invalid {
@@ -33,8 +33,8 @@
 
     &:disabled {
       border: none;
-      outline: 1px solid #e7e7e7;
-      background-color: #cdcdcd;
+      outline: 1px solid @color-outline;
+      background-color: @color-border;
     }
   }
 
@@ -50,12 +50,12 @@
   @media (min-width: @tablet-width) {
     row-gap: 23px;
     padding: 28px 0 32px 27px;
-    border: 1px solid #e7e7e7;
+    border: 1px solid @color-outline;
   }
 
   @media (min-width: @desktop-width) {
     padding: 30px 0 30px 28px;
-    border: 1px solid #e7e7e7;
+    border: 1px solid @color-outline;
   }
 }
 
@@ -71,11 +71,16 @@
     margin-left: 13px;
     padding: 14px 50px 13px 15px;
     border: none;
-    outline: 1px solid #e7e7e7;
+    outline: 1px solid @color-outline;
     flex-grow: 1;
 
     &:hover {
-      outline-color: #cdcdcd;
+      outline-color: @color-border;
+    }
+
+    &:focus {
+      border: none;
+      outline: 2px solid @color-text-primary;
     }
 
     &:invalid {
@@ -83,15 +88,10 @@
       outline: 2px solid @color-invalid;
     }
 
-    &:focus {
-      border: none;
-      outline: 2px solid #444444;
-    }
-
     &:disabled {
       border: none;
-      outline: 1px solid #e7e7e7;
-      background-color: #cdcdcd;
+      outline: 1px solid @color-outline;
+      background-color: @color-border;
     }
 
     &:invalid + .form-list__field-icon path {
@@ -189,7 +189,7 @@
   left: 0;
   width: 30px;
   height: 30px;
-  border: 1px solid #cdcdcd;
+  border: 1px solid @color-border;
 
   &--radio {
     border-radius: 50%;
