--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -60,8 +60,8 @@
   margin: 0 auto;
   padding-top: 20px;
   padding-bottom: 20px;
-  border-top: 1px solid #d9d9d9;
-  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid @color-border-secondary;
+  border-bottom: 1px solid @color-border-secondary;
 
   @media (min-width: @tablet-width) {
     border: none;
