--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,16 +1,23 @@
 .page-header {
   position: relative;
-  padding: 13px 21px 15px 20px;
-  border-bottom: 1px solid #d9d9d9;
-  background-color: @color-bg-light;
-  color: @color-title-primary;
-  z-index: 1;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 13px 0 15px 0;
+  width: 100%;
+  border-bottom: 1px solid @color-border-secondary;
 
   &--index {
     border-bottom: none;
   }
 
   @media (min-width: @tablet-width) {
+    width: 92.18%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     margin-bottom: 65px;
     padding: 0;
     padding-top: 25px;
@@ -18,6 +25,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    width: 84.72%;
     padding-top: 55px;
     margin-bottom: 74px;
 
@@ -34,7 +42,50 @@
 }
 
 .page-header__wrapper {
+  position: relative;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
+  margin: 0 auto;
+  width: 87.5%;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    width: 30%;
+  }
+}
+
+.page-header__logo-link {
+  position: relative;
+  z-index: 3;
+}
+
+.page-header__toggle-navigation {
+  position: relative;
+  z-index: 3;
+  box-sizing: border-box;
+  width: 24px;
+  height: 24px;
+  border: none;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  cursor: pointer;
+
+  &--nojs {
+    display: none;
+  }
+
+  &--close {
+    background-image: url("../../img/button-menu-open.svg");
+  }
+
+  &--open {
+    background-image: url("../../img/button-menu-close.svg");
+  }
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
