--- a/source/less/blocks/page-navigation.less
+++ b/source/less/blocks/page-navigation.less
@@ -1,8 +1,28 @@
 .page-navigation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 60px;
+  width: 100%;
+
+  @media (max-width: @mobile-width-only) {
+    &--close {
+      display: none;
+      top: -100%;
+    }
+
+    &--nojs {
+      display: block;
+      position: static;
+      padding-top: 0;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    padding-top: 0;
+    width: 70%;
+  }
 
   @media (min-width: @desktop-width) {
     &--index {
@@ -12,39 +32,7 @@
 }
 
 .page-navigation__list {
-  position: absolute;
-  top: 65px;
-  right: 0;
+  position: relative;
+  z-index: 2;
   width: 100%;
-
-  @media (min-width: @tablet-width) {
-    position: static;
-  }
-}
-
-.page-navigation__list--close {
-  display: none;
-}
-
-.page-navigation__toggle {
-  align-self: flex-end;
-  box-sizing: border-box;
-  width: 24px;
-  height: 24px;
-  border: none;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  cursor: pointer;
-
-  @media (min-width: @tablet-width) {
-    display: none;
-  }
-}
-
-.page-navigation__toggle--close {
-  background-image: url("../../img/button-menu-open.svg");
-}
-
-.page-navigation__toggle--open {
-  background-image: url("../../img/button-menu-close.svg");
 }
