--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -163,7 +163,7 @@
   margin: 0;
   margin-bottom: 15px;
   padding-bottom: 23px;
-  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 1px solid @color-border-secondary;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 52px;
