--- a/source/less/blocks/work-examples.less
+++ b/source/less/blocks/work-examples.less
@@ -3,11 +3,11 @@
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
   padding-bottom: 40px;
-  background-color: #eaeaea;
+  background-color: @color-text-primary-lighter;
 
   @media (min-width: @tablet-width) {
     padding-bottom: 101px;
-    border-top: 1px solid #e6e6e6;
+    border-top: 1px solid @color-border-lighter;
   }
 
   @media (min-width: @desktop-width) {
@@ -77,7 +77,7 @@
   @media (min-width: @desktop-width) {
     grid-column: 1/-1;
     grid-row: 2/4;
-    background-color: #eaeaea;
+    background-color: @color-text-primary-lighter;
   }
 }
 
@@ -93,7 +93,7 @@
     padding-top: 70px;
     padding-right: 790px;
     padding-bottom: 75px;
-    background-color: #eaeaea;
+    background-color: @color-text-primary-lighter;
   }
 }
 
@@ -134,7 +134,7 @@
   padding-top: 14px;
   padding-bottom: 17px;
   min-width: 124px;
-  border: 1px solid #cdcdcd;
+  border: 1px solid @color-border;
   border-radius: 3px;
 
   @media (min-width: @tablet-width) {
@@ -175,7 +175,7 @@
   font-size: 12px;
   line-height: 12px;
   text-align: center;
-  background-color: #eaeaea;
+  background-color: @color-text-primary-lighter;
   z-index: 1;
 
   @media (min-width: @tablet-width) {
@@ -189,7 +189,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    background-color: #eaeaea;
+    background-color: @color-text-primary-lighter;
   }
 }
 
