--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,5 +1,6 @@
 //Цвет текста
 @color-text-primary: #444444;
+@color-text-primary-lighter: #eaeaea;
 @color-text-secondary: #111111;
 @color-text-light: #ffffff;
 
@@ -15,11 +16,18 @@
 //Цвет фона
 @color-bg-light: #ffffff;
 @color-bg-dark: #f2f2f2;
+@color-bg-darkes: #ebebeb;
 
 @color-logo: #666666;
 
+//Цвет рамок
+@color-border: #cdcdcd;
+@color-border-lighter: #e6e6e6;
+@color-border-secondary: #d9d9d9;
+@color-outline: #e7e7e7;
 
 //Viewports
 
 @tablet-width: 768px;
 @desktop-width: 1440px;
+@mobile-width-only: 767px;
