--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -21,15 +21,14 @@
   height: 22px;
   color: @color-logo;
   text-decoration: none;
+  transition: color 0.3s, opacity 0.3s;
 
   &:hover {
     color: @color-base-gr;
-    transition: 0.7s;
   }
 
   &:active {
     color: @color-base-gr;
     opacity: 0.3;
-    transition: 0.7s;
   }
 }
