--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -12,17 +12,17 @@
 
   &:hover .copyright__link-image path {
     fill: @color-base-gr;
-    transition: 0.7s;
+    transition: fill 0.7s;
   }
 
   &:active {
     opacity: 0.3;
-    transition: 0.7s;
+    transition: opacity 0.7s;
   }
 
   &:active .copyright__link-image path {
     fill: @color-base-gr;
-    transition: 0.7s;
+    transition: fill 0.7s;
   }
 
   @media (min-width: @tablet-width) {
