--- a/source/less/blocks/link-navigation.less
+++ b/source/less/blocks/link-navigation.less
@@ -5,6 +5,7 @@
   color: @color-title-primary;
   text-transform: uppercase;
   text-decoration: none;
+  transition: opacity 0.3s;
 
   &:hover {
     opacity: 0.6;
