--- a/source/less/blocks/logo-link.less
+++ b/source/less/blocks/logo-link.less
@@ -3,15 +3,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: opacity 0.3s;
 
   &:hover {
     opacity: 0.8;
-    transition: 0.7s;
   }
 
   &:active {
     opacity: 0.6;
-    transition: 0.7s;
   }
 
   @media (min-width: @tablet-width) {
