--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -205,23 +205,21 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    transition: right 0.7s, width 0.7s, opacity 0.7s;
   }
 
   &:hover&::after {
     right: 0;
     width: 32px;
-    transition: 0.7s;
   }
 
   &:active {
     opacity: 0.3;
-    transition: 0.7s;
   }
 
   &:active&::after {
     right: 0;
     width: 32px;
-    transition: 0.7s;
   }
 
   @media (min-width: @tablet-width) {
