--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -76,8 +76,16 @@
   position: relative;
   padding: 187px 61px 43px 58px;
   background-color: fade(@color-base-gr, 85%);
-  background-image: url("../../img/green-subsrate.png"), url("../../img/action.png");
+  background-image: url("../../img/green-subsrate.png"),
+                    url("../../img/action.png");
   background-repeat: no-repeat;
+  background-size: cover;
+
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/green-subsrate@2x.png"),
+                      url("../../img/action@2x.png");
+  }
 
   &::after {
     content: "";
@@ -96,8 +104,7 @@
 
   @media (min-width: @tablet-width) {
     padding: 71px 155px 69px 421px;
-    background-size: cover;
-    background-position: 50%;
+    background-position: bottom 40% right 0;
 
     &::after {
       width: 80px;
