Оптимизирует графику всех страниц

--- a/source/less/blocks/advantages-list.less
+++ b/source/less/blocks/advantages-list.less
@@ -34,20 +34,21 @@
   }
 
   &--benefit::before {
-    background-image: url("../../img/advantages-benefit.svg");
+    background-image: url("../../img/sprite.svg#advantages-benefit");
   }
 
   &--easier::before {
-    background-image: url("../../img/advantages-easier.svg");
+    background-image: url("../../img/sprite.svg#advantages-easier");
   }
 
   &--practical::before {
-    background-image: url("../../img/advantages-practical.svg");
+    background-image: url("../../img/sprite.svg#advantages-practical");
   }
 
   &--fast::before {
-    background-image: url("../../img/advantages-fast.svg");
+    background-image: url("../../img/sprite.svg#advantages-fast");
   }
+
 
   @media (min-width: @tablet-width) {
     max-width: 249px;
