--- a/source/less/blocks/basic-card.less
+++ b/source/less/blocks/basic-card.less
@@ -192,11 +192,9 @@
   width: 30px;
   height: 30px;
   border: none;
-  background-color: transparent;
-  background-image: url("../../img/show-more-icon.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  mask-image: url("../../img/sprite.svg#show-more-icon");
+  background-color: #d3d3d3;
+  mask-repeat: no-repeat;
   cursor: pointer;
   transition: opacity 0.3s;
 
