--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -31,4 +31,17 @@
     color: @color-base-gr;
     opacity: 0.3;
   }
+
+  &:hover .social__link-image use {
+    color: @color-base-gr;
+  }
+
+  &:active .social__link-image use {
+    color: @color-base-gr;
+  }
+}
+
+.social__link-image use {
+  color: @color-logo;
+  transition: color 0.3s;
 }
