--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -95,11 +95,8 @@
     transform: translateX(-50%);
     width: 78px;
     height: 80px;
-    background-color: transparent;
-    background-image: url("../../img/action-icon.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    mask-image: url("../../img/sprite.svg#action-icon");
+    background-color: @color-bg-light;
   }
 
   @media (min-width: @tablet-width) {
