--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -10,9 +10,8 @@
   line-height: 20px;
   text-decoration: none;
 
-  &:hover .copyright__link-image path {
-    fill: @color-base-gr;
-    transition: fill 0.7s;
+  &:hover .copyright__link-image use {
+    color: @color-base-gr;
   }
 
   &:active {
@@ -20,9 +19,8 @@
     transition: opacity 0.7s;
   }
 
-  &:active .copyright__link-image path {
-    fill: @color-base-gr;
-    transition: fill 0.7s;
+  &:active .copyright__link-image use {
+    color: @color-base-gr;
   }
 
   @media (min-width: @tablet-width) {
@@ -34,6 +32,7 @@
   min-width: 113px;
 }
 
-.copyright__link-image {
+.copyright__link-image use {
   color: @color-logo;
+  transition: fill 0.7s;
 }
