Делает автоматизацию сборки проекта

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -10,16 +10,16 @@
   line-height: 20px;
   text-decoration: none;
 
-  &:hover .copyright__link-image use {
+  &:hover .copyright__link-image {
     color: @color-base-gr;
   }
 
   &:active {
     opacity: 0.3;
-    transition: opacity 0.7s;
+    transition: opacity 0.3s;
   }
 
-  &:active .copyright__link-image use {
+  &:active .copyright__link-image {
     color: @color-base-gr;
   }
 
@@ -32,7 +32,7 @@
   min-width: 113px;
 }
 
-.copyright__link-image use {
+.copyright__link-image {
   color: @color-logo;
-  transition: fill 0.7s;
+  transition: color 0.3s;
 }
