--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -55,7 +55,7 @@
     border-radius: 2px;
   }
 
-  &:hover .slider__button-icon use {
+  &:hover .slider__button-icon {
     color: @color-base-gr;
   }
 
@@ -63,7 +63,7 @@
     background-color: @color-base-gr;
   }
 
-  &:active .slider__button-icon use {
+  &:active .slider__button-icon {
     color: @color-base-gr;
     opacity: 0.6;
   }
@@ -85,8 +85,5 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-
-  & use {
-    color: @color-logo;
-  }
+  color: @color-logo;
 }
