--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -32,16 +32,16 @@
     opacity: 0.3;
   }
 
-  &:hover .social__link-image use {
+  &:hover .social__link-image {
     color: @color-base-gr;
   }
 
-  &:active .social__link-image use {
+  &:active .social__link-image {
     color: @color-base-gr;
   }
 }
 
-.social__link-image use {
+.social__link-image {
   color: @color-logo;
   transition: color 0.3s;
 }
