--- a/source/less/blocks/basic-card.less
+++ b/source/less/blocks/basic-card.less
@@ -1,8 +1,8 @@
 .basic-card {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 17px;
-  padding-top: 20px;
+  row-gap: 16px;
+  padding-top: 21px;
   padding-bottom: 25px;
 
   @media (min-width: @tablet-width) {
@@ -11,6 +11,12 @@
     row-gap: 0;
     padding: 0;
   }
+}
+
+.basic-card__link {
+  color: currentColor;
+  display: block;
+  text-decoration: none;
 }
 
 .basic-card--show-more {
@@ -33,7 +39,7 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: 0;
+    top: -8px;
     left: 50%;
     transform: translateX(-50%) translateY(-30%);
     width: 200px;
@@ -77,6 +83,10 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 34px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 43px;
+  }
 }
 
 .basic-card__title {
@@ -110,7 +120,7 @@
   line-height: 16px;
 
   @media (min-width: @tablet-width) {
-    row-gap: 10px;
+    row-gap: 7px;
     font-size: 16px;
     line-height: 20px;
   }
