--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 13px 0 15px 0;
+  padding: 10px 0 14px 0;
   width: 100%;
   border-bottom: 1px solid @color-border-secondary;
 
@@ -18,10 +18,13 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 65px;
     padding: 0;
     padding-top: 25px;
     border-bottom: none;
+
+    &--index {
+      margin-bottom: 35px;
+    }
   }
 
   @media (min-width: @desktop-width) {
