--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -46,26 +46,34 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding: 77px 316px 57px 52px;
+    padding: 74px 316px 50px 52px;
 
     &::before {
-      top: 92px;
-      right: 64px;
+      top: 89px;
+      right: 63px;
       left: auto;
       width: 200px;
       height: 200px;
     }
 
     &--slim::after {
-      top: 81px;
+      top: 78px;
       right: 93px;
       left: auto;
       width: 140px;
       height: 194px;
     }
 
+    &--pro {
+      padding-top: 80px;
+    }
+
+    &--pro::before {
+      top: 95px;
+    }
+
     &--pro::after {
-      top: 135px;
+      top: 138px;
       right: 29px;
       left: auto;
       width: 268px;
@@ -75,7 +83,7 @@
 
   @media (min-width: @desktop-width) {
     width: 570px;
-    padding: 77px 61px 59px 52px;
+    padding: 77px 61px 55px 52px;
 
     &::before {
       top: 47px;
@@ -127,12 +135,12 @@
 .program__description {
   box-sizing: border-box;
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 14px;
   padding-bottom: 23px;
   border-bottom: 1px solid @color-border-secondary;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 52px;
+    margin-bottom: 50px;
     padding-bottom: 0;
     border: none;
     color: @color-title-primary;
@@ -141,7 +149,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 27px;
+    margin-bottom: 24px;
     text-align: left;
   }
 }
@@ -161,11 +169,11 @@
   &::after {
     content: "";
     position: absolute;
-    top: 50%;
+    top: 45%;
     transform: translateY(-50%);
     box-sizing: border-box;
-    margin-left: 25px;
-    width: 25px;
+    margin-left: 6px;
+    width: 50px;
     height: 12px;
     mask-image: url("../../img/sprite.svg#arrow-right");
     background-color: #000000;
@@ -176,7 +184,7 @@
   }
 
   &:hover&::after {
-    width: 32px;
+    width: 58px;
   }
 
   &:active {
@@ -184,13 +192,16 @@
   }
 
   &:active&::after {
-    right: 0;
-    width: 32px;
+    width: 58px;
   }
 
   @media (min-width: @tablet-width) {
     padding-right: 57px;
     font-size: 20px;
     line-height: normal;
+
+    &::after {
+      margin-left: 17px;
+    }
   }
 }
