--- a/source/less/blocks/additional-card.less
+++ b/source/less/blocks/additional-card.less
@@ -4,6 +4,7 @@
 
   @media (min-width: @desktop-width) {
     flex-direction: row;
+    align-items: center;
   }
 }
 
@@ -15,7 +16,7 @@
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 25px;
+    margin-bottom: 24px;
   }
 
   @media (min-width: @desktop-width) {
@@ -42,6 +43,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    margin-top: 2px;
     margin-right: auto;
   }
 }
@@ -59,14 +61,18 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
-    column-gap: 49px;
+    column-gap: 52px;
     font-size: 16px;
     line-height: 20px;
+
+    &--water {
+      column-gap: 60px;
+    }
   }
 
   @media (min-width: @desktop-width) {
-    justify-content: space-between;
     min-width: 285px;
+    padding-top: 5px;
     font-size: 16px;
     line-height: 20px;
   }
@@ -80,6 +86,11 @@
 
 .additional-card__meaning {
   margin: 0;
+
+  @media (min-width: @desktop-width) {
+    min-width: 41px;
+    text-align: left;
+  }
 }
 
 .additional-card__button {
