--- a/source/less/blocks/additional-products-list.less
+++ b/source/less/blocks/additional-products-list.less
@@ -2,12 +2,21 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+  margin-bottom: 35px;
   padding: 0;
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 69px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+  }
 }
 
 .additional-products-list__item {
-  padding-top: 13px;
+  padding-top: 12px;
   padding-bottom: 19px;
   border-bottom: 1px solid @color-border;
 
@@ -18,7 +27,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 15px 0 17px 0;
+    padding: 15px 0 16px 0;
     border-right: none;
     border-left: none;
   }
