--- a/source/less/blocks/cooperation.less
+++ b/source/less/blocks/cooperation.less
@@ -35,16 +35,20 @@
 
 .cooperation__title {
   margin: 0;
+  margin-left: -2px;
+  min-width: 140px;
   font-family: "Oswald", sans-serif;
   color: @color-text-secondary;
   font-size: 16px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 20px;
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
+    margin-left: 0;
     max-width: 163px;
     font-size: 20px;
+    line-height: 26px;
   }
 }
 
@@ -63,6 +67,11 @@
     flex-direction: column;
     max-width: 157px;
     font-size: 16px;
+    text-align: right;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: left;
   }
 }
 
