--- a/source/less/blocks/form-list.less
+++ b/source/less/blocks/form-list.less
@@ -7,12 +7,12 @@
 }
 
 .form-list--basic {
-  row-gap: 14px;
+  row-gap: 20px;
 
   & .form-list__field {
     box-sizing: border-box;
     margin-left: 13px;
-    padding: 11px 20px;
+    padding: 11px 16px;
     border: none;
     outline: 1px solid @color-outline;
     flex-grow: 1;
@@ -41,6 +41,10 @@
   @media (min-width: @tablet-width) {
     row-gap: 20px;
     margin-bottom: 0;
+
+    & .form-list__field {
+      padding-left: 21px;
+    }
   }
 }
 
@@ -69,7 +73,7 @@
   & .form-list__field {
     box-sizing: border-box;
     margin-left: 13px;
-    padding: 14px 50px 13px 15px;
+    padding: 14px 44px 13px 15px;
     border: none;
     outline: 1px solid @color-outline;
     flex-grow: 1;
@@ -144,10 +148,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 42px;
+    column-gap: 60px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: repeat(4, 1fr);
+    column-gap: 80px;
   }
 }
 
@@ -225,12 +231,18 @@
 .form-list__control-field[type="checkbox"]:checked + .form-list__control-mark::before {
   content: "";
   position: absolute;
+  width: 18px;
   top: 0;
-  right: 0;
   bottom: 0;
-  left: 0;
+  left: 6px;
   mask-image: url("../../img/sprite.svg#field-icon-tick");
   background-color: @color-base-gr;
+
+  @media (min-width: @tablet-width) {
+    & {
+      width: 27px;
+    }
+  }
 }
 
 .form-list__control-field[type="radio"]:checked + .form-list__control-mark::before {
