--- a/source/less/blocks/form-program.less
+++ b/source/less/blocks/form-program.less
@@ -25,18 +25,20 @@
   margin-bottom: 24px;
 
   @media (min-width: @tablet-width) {
+    margin-right: 40px;
     margin-left: 40px;
     margin-bottom: 65px;
   }
 
   @media (min-width: @desktop-width) {
+    margin-right: 0;
     margin-left: 0;
     margin-bottom: 70px;
   }
 }
 
 .form-program__group--comments {
-  margin-bottom: 40px;
+  margin-bottom: 24px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 57px;
@@ -55,7 +57,7 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 60px;
+    column-gap: 20px;
     margin-left: 40px;
   }
 
@@ -74,9 +76,21 @@
   font-weight: 400;
   line-height: 16px;
   text-transform: none;
+  letter-spacing: -0.2px;
 
   @media (min-width: @tablet-width) {
+    margin-top: -2px;
     font-size: 16px;
     line-height: 16px;
+  }
+}
+
+.form-program__button {
+  @media (min-width: @tablet-width) {
+    max-width: 284px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 100%;
   }
 }
