--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -9,6 +9,7 @@
     display: grid;
     grid-template-columns: auto 1220px auto;
     grid-template-rows: repeat(3, auto);
+    padding-bottom: 8px;
   }
 }
 
@@ -31,13 +32,13 @@
 .page-footer__wrapper {
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
+  row-gap: 18px;
   padding: 40px 0;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: space-between;
-    padding: 63px 0;
+    padding: 57px 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -65,6 +66,11 @@
 
   @media (min-width: @tablet-width) {
     border: none;
-    padding: 0;
+    padding: 5px 0;
+    padding-left: 35px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 13px;
+    }
 }
