--- a/source/less/blocks/program-list.less
+++ b/source/less/blocks/program-list.less
@@ -6,6 +6,10 @@
   padding: 0;
   list-style: none;
 
+  @media (min-width: @tablet-width) {
+    row-gap: 28px;
+  }
+
   @media (min-width: @desktop-width) {
     flex-direction: row;
     column-gap: 80px;
