--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -31,7 +31,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 143px;
+    padding-top: 113px;
+    padding-bottom: 53px;
 
     &::after {
       content: "";
@@ -96,7 +97,7 @@
     grid-row: 1/2;
     grid-column: 1/2;
     margin-top: 110px;
-    margin-bottom: 40px;
+    margin-bottom: 0;
   }
 }
 
@@ -126,9 +127,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    grid-row: 2/3;
+    grid-row: 1/2;
     grid-column: 1/2;
-    margin-bottom: 52px;
+    align-self: flex-end;
+    margin-bottom: 236px;
   }
 }
 
@@ -139,9 +141,10 @@
   @media (min-width: @tablet-width) {
     grid-row: 3/4;
     grid-column: 1/-1;
-    margin-top: -70px;
-    margin-left: -50px;
-    max-height: 609px;
+    margin-top: -83px;
+    margin-left: -89px;
+    min-width: 709px;
+    min-height: 609px;
   }
 
   @media (min-width: @desktop-width) {
@@ -150,7 +153,9 @@
     margin-top: 29px;
     margin-bottom: 0;
     margin-left: -53px;
-    max-width: 552px;
+    min-width: auto;
+    min-height: auto;
+    width: 552px;
     height: 499px;
   }
 }
@@ -166,6 +171,9 @@
   }
 
   @media (min-width: @desktop-width) {
+    grid-row: 1/2;
+    align-self: flex-end;
     margin-top: 0;
+    margin-bottom: 131px;
   }
 }
