--- a/source/less/blocks/work-examples.less
+++ b/source/less/blocks/work-examples.less
@@ -85,14 +85,16 @@
   margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 6px;
     padding-bottom: 250px;
     background-color: @color-bg-light;
   }
 
   @media (min-width: @desktop-width) {
+    margin-bottom: 0;
     padding-top: 70px;
     padding-right: 790px;
-    padding-bottom: 75px;
+    padding-bottom: 70px;
     background-color: @color-text-primary-lighter;
   }
 }
@@ -108,6 +110,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    width: 432px;
     margin-bottom: 69px;
   }
 }
@@ -117,11 +120,11 @@
   display: flex;
   flex-wrap: wrap;
   column-gap: 32px;
-  row-gap: 20px;
+  row-gap: 32px;
 
   @media (min-width: @desktop-width) {
-    column-gap: 42px;
-    row-gap: 55px;
+    column-gap: 31px;
+    row-gap: 60px;
   }
 }
 
@@ -138,7 +141,12 @@
   border-radius: 3px;
 
   @media (min-width: @tablet-width) {
+    padding-bottom: 20px;
     min-width: 162px;
+
+    &--thick {
+      margin-right: 10px;
+    }
   }
 }
 
@@ -196,8 +204,9 @@
 .work-examples__number--total-sum {
   position: static;
   transform: none;
-  margin-right: 3px;
+  margin-right: 4px;
   width: auto;
+  padding: 0;
   background-color: transparent;
   font-family: "Oswald", sans-serif;
   color: @color-title-primary;
@@ -207,12 +216,15 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
+    margin-bottom: 8px;
     font-size: 20px;
     line-height: 20px;
   }
 
   @media (min-width: @desktop-width) {
     margin-right: 63px;
+    margin-bottom: 0;
+    letter-spacing: 0.2px;
   }
 }
 
@@ -257,7 +269,7 @@
   @media (min-width: @desktop-width) {
     grid-column: 2/3;
     grid-row: 1/-1;
-    margin-top: 0;
+    margin-top: 46px;
     margin-right: 0;
   }
 }
