Исправляет ошибки по stylelint

--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -76,15 +76,13 @@
   position: relative;
   padding: 187px 61px 43px 58px;
   background-color: fade(@color-base-gr, 85%);
-  background-image: url("../../img/green-subsrate.png"),
-                    url("../../img/action.png");
+  background-image: url("../../img/green-subsrate.png"), url("../../img/action.png");
   background-repeat: no-repeat;
   background-size: cover;
 
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/green-subsrate@2x.png"),
-                      url("../../img/action@2x.png");
+    background-image: url("../../img/green-subsrate@2x.png"), url("../../img/action@2x.png");
   }
 
   &::after {
