--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -12,15 +12,13 @@
     z-index: -1;
     width: 100%;
     height: 302px;
-    background-image: url("../../img/green-subsrate.png"),
-                      url("../../img/promo-bg-image.png");
+    background-image: url("../../img/green-subsrate.png"), url("../../img/promo-bg-image.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/green-subsrate@2x.png"),
-                        url("../../img/promo-bg-image@2x.png");
+      background-image: url("../../img/green-subsrate@2x.png"), url("../../img/promo-bg-image@2x.png");
     }
   }
 
@@ -39,13 +37,11 @@
       left: auto;
       width: 50%;
       height: 100%;
-      background-image: url("../../img/green-subsrate.png"),
-                        url("../../img/promo-bg-image.jpg");
+      background-image: url("../../img/green-subsrate.png"), url("../../img/promo-bg-image.jpg");
       background-position: bottom 90% right 80%;
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../../img/green-subsrate@2x.png"),
-                          url("../../img/promo-bg-image@2x.jpg");
+        background-image: url("../../img/green-subsrate@2x.png"), url("../../img/promo-bg-image@2x.jpg");
       }
     }
   }
